complete word-guess-game functionality

--- a/03-javascript/word-guess-game/index.html
+++ b/03-javascript/word-guess-game/index.html
@@ -26,7 +26,8 @@
 
       <hr />
       <h2>Stats</h2>
-      <p>Wins: <span data-target="score"></span></p>
+      <p>Wins: <span data-target="winCount"></span></p>
+      <p>Losses: <span data-target="lossCount"></span></p>
       <hr />
       <h2>Current Word</h2>
       <p class="current-word" data-target="currentWord"></p>
