--- a/04-jquery/homework/unit-4-game/index.html
+++ b/04-jquery/homework/unit-4-game/index.html
@@ -70,11 +70,19 @@
           <p>Loses: <span data-target="losses"></span></p>
         </div>
       </div>
-      <div class="row box bg-green crystals">
-        <img data-target="crystal1" src="assets/images/crystal-green.png" />
-        <img data-target="crystal2" src="assets/images/crystal-white.png" />
-        <img data-target="crystal3" src="assets/images/crystal-violet.png" />
-        <img data-target="crystal4" src="assets/images/crystal-pink.png" />
+      <div class="row">
+        <div class="col-md mr-2 box bg-green crystal">
+          <img data-target="crystal1" src="assets/images/crystal-green.png" />
+        </div>
+        <div class="col-md mx-2 box bg-green crystal">
+          <img data-target="crystal2" src="assets/images/crystal-white.png" />
+        </div>
+        <div class="col-md mx-2 box bg-green crystal">
+          <img data-target="crystal3" src="assets/images/crystal-violet.png" />
+        </div>
+        <div class="col-md ml-2 box bg-green crystal">
+          <img data-target="crystal4" src="assets/images/crystal-pink.png" />
+        </div>
       </div>
       <div class="row box bg-blue game-result">
         <p>Your total score is: <span data-target="score"></span></p>
