--- a/05-timers/10-Stopwatch/10-Stopwatch-ec/stopwatch.html
+++ b/05-timers/10-Stopwatch/10-Stopwatch-ec/stopwatch.html
@@ -3,21 +3,16 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
-
   <head>
-
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Stopwatch</title>
 
     <!-- Our CSS style sheet -->
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-
     <div id="wrapper">
-
       <div id="display">00:00</div>
 
       <!-- Div containing our stopwatch controls -->
@@ -29,16 +24,15 @@
       </div>
 
       <div id="laps"></div>
-
     </div>
 
     <!-- jQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    ></script>
 
     <!-- Script -->
     <script type="text/javascript" src="stopwatch.js"></script>
-
   </body>
-
 </html>
-
