--- a/06-ajax/07-MovieButtonLayout/Unsolved/movie-button-layout-harder.html
+++ b/06-ajax/07-MovieButtonLayout/Unsolved/movie-button-layout-harder.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>Favorite Movies</title>
-  <style type="text/css">
-    button,
-    div,
-    form,
-    input {
-      margin: 10px;
-    }
-  </style>
-</head>
-
-<body>
-
-  <div class="container">
-    <h1>Movie Search</h1>
-
-    <!-- Movies will get dumped here -->
-    <div id="movies-view"></div>
-
-    <form id="movie-form">
-      <label for="movie-input">Add a Movie, Yo!</label>
-      <input type="text" id="movie-input"><br>
-
-      <!-- Button triggers new movie to be added -->
-      <input id="add-movie" type="submit" value="Add a Movie, Yo!">
-    </form>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-      // Initial array of movies
-      var movies = ["The Matrix", "The Notebook", "Mr. Nobody", "The Lion King"];
-
-      // Function for displaying movie data
-      function renderButtons() {
-
-        // YOUR CODE GOES HERE
-
+  <head>
+    <meta charset="utf-8" />
+    <title>Favorite Movies</title>
+    <style type="text/css">
+      button,
+      div,
+      form,
+      input {
+        margin: 10px;
       }
+    </style>
+  </head>
 
-      // This function handles events where one button is clicked
-      $("#add-movie").on("click", function() {
+  <body>
+    <div class="container">
+      <h1>Movie Search</h1>
 
-        // YOUR CODE GOES HERE
+      <!-- Movies will get dumped here -->
+      <div id="movies-view"></div>
 
-      });
+      <form id="movie-form">
+        <label for="movie-input">Add a Movie, Yo!</label>
+        <input type="text" id="movie-input" /><br />
 
-      // Calling the renderButtons function to display the initial list of movies
-      renderButtons();
-    </script>
-  </div>
-</body>
+        <!-- Button triggers new movie to be added -->
+        <input id="add-movie" type="submit" value="Add a Movie, Yo!" />
+      </form>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script type="text/javascript">
+        // Initial array of movies
+        var movies = [
+          "The Matrix",
+          "The Notebook",
+          "Mr. Nobody",
+          "The Lion King"
+        ];
 
+        // Function for displaying movie data
+        function renderButtons() {
+          $("#movies-view").html("");
+
+          for (let i = 0; i < movies.length; i++) {
+            var newButton = $(
+              `<button class="movie" data-name="${movies[i]}">${
+                movies[i]
+              }</button>`
+            );
+            $("#movies-view").append(newButton);
+          }
+        }
+
+        // This function handles events where one button is clicked
+        $("#add-movie").on("click", function() {
+          var movie = $("#movie-input").val();
+          movies.push(movie);
+
+          event.preventDefault();
+          renderButtons();
+        });
+
+        // Calling the renderButtons function to display the initial list of movies
+        renderButtons();
+      </script>
+    </div>
+  </body>
 </html>
