--- a/06-ajax/11-BandsInTownApp/Unsolved/bands-in-town-unsolved.html
+++ b/06-ajax/11-BandsInTownApp/Unsolved/bands-in-town-unsolved.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Bands In Town</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Bands In Town</title>
-</head>
+  <body>
+    <!-- Artist Select Box -->
+    <form id="artist-form">
+      <!-- Label for Text Box -->
+      <label for="artist-input">Choose Your Artist</label>
 
-<body>
+      <!-- Text Input Box -->
+      <input type="text" id="artist-input" /><br />
 
-  <!-- Artist Select Box -->
-  <form id="artist-form">
+      <!-- Submit Button -->
+      <input id="select-artist" type="submit" value="GO!" />
+    </form>
 
-    <!-- Label for Text Box -->
-    <label for="artist-input">Choose Your Artist</label>
+    <!-- Artist Information -->
+    <div id="artist-div"></div>
+  </body>
 
-    <!-- Text Input Box -->
-    <input type="text" id="artist-input"><br>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script>
+    function searchBandsInTown(artist) {
+      // Add code to query the bands in town api searching for the artist received as an argument to this function
+      // Using jQuery, append the following to the #artist-div :
+      // The artist's name
+      // The artists thumbnail image
+      // The number of fans tracking this artist
+      // The number of upcoming events for this artist
+      // A link to the bandsintown url for this artist
+      // Note: Append actual HTML elements, not just text
 
-    <!-- Submit Button -->
-    <input id="select-artist" type="submit" value="GO!">
-  </form>
+      var queryURL =
+        "https://rest.bandsintown.com/artists/" +
+        artist +
+        "?app_id=codingbootcamp";
 
-  <!-- Artist Information -->
-  <div id="artist-div"></div>
+      $.ajax({
+        url: queryURL,
+        method: "GET"
+      }).then(function(response) {
+        $("#artist-div").prepend(`
+          <div class="artist-detail">
+            <h2><a href="">${response.name}</a></h2>
+            <img src="${response.image_url}" alt="">
+            <p>${response.tracker_count} people are following this artist</p>
+            <p>${response.upcoming_event_count} upcoming events</p>
+            <p><a href="${response.url}">See Tour Dates</a></p>
+          </div>
+      `);
+      });
+    }
 
-</body>
+    // Event handler for user clicking the select-artist button
+    $("#select-artist").on("click", function(event) {
+      // Preventing the button from trying to submit the form
+      event.preventDefault();
+      // Storing the artist name
+      var artist = $("#artist-input")
+        .val()
+        .trim();
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
-  function searchBandsInTown(artist) {
-    // Add code to query the bands in town api searching for the artist received as an argument to this function
-    // Using jQuery, append the following to the #artist-div :
-    // The artist's name
-    // The artists thumbnail image
-    // The number of fans tracking this artist
-    // The number of upcoming events for this artist
-    // A link to the bandsintown url for this artist
-    // Note: Append actual HTML elements, not just text
-  }
-
-  // Event handler for user clicking the select-artist button
-  $("#select-artist").on("click", function(event) {
-    // Preventing the button from trying to submit the form
-    event.preventDefault();
-    // Storing the artist name
-    var artist = $("#artist-input").val().trim();
-
-    // Running the searchBandsInTown function(passing in the artist as an argument)
-    searchBandsInTown(artist);
-  });
-</script>
-
+      // Running the searchBandsInTown function(passing in the artist as an argument)
+      searchBandsInTown(artist);
+    });
+  </script>
 </html>
