--- a/06-ajax/homework/index.html
+++ b/06-ajax/homework/index.html
@@ -93,6 +93,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <!-- Code to the JavaScript File -->
-    <script src="nyt-ec.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
