--- a/04-jquery/20-jquery-calculator-ec.html
+++ b/04-jquery/20-jquery-calculator-ec.html
@@ -17,7 +17,9 @@
     <!-- Jumbotron for Title -->
     <div class="jumbotron">
       <h1 class="text-center">jQuery Calculator</h1>
-      <h3 class="text-center">Perform basic mathematic operations using the power of jQuery!</h3>
+      <h3 class="text-center">
+        Perform basic mathematic operations using the power of jQuery!
+      </h3>
     </div>
 
     <div class="container">
@@ -28,39 +30,87 @@
             <h3 class="card-header">Calculator</h3>
 
             <div class="card-body">
-              <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
-              <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
-              <button id="button-3" class="btn btn-primary number" value="3"><h1>3</h1></button>
-              <button id="button-plus" class="btn btn-danger operator" value="plus">
+              <button id="button-1" class="btn btn-primary number" value="1">
+                <h1>1</h1>
+              </button>
+              <button id="button-2" class="btn btn-primary number" value="2">
+                <h1>2</h1>
+              </button>
+              <button id="button-3" class="btn btn-primary number" value="3">
+                <h1>3</h1>
+              </button>
+              <button
+                id="button-plus"
+                class="btn btn-danger operator"
+                value="plus"
+              >
                 <h1>+</h1>
               </button>
               <br /><br />
-              <button id="button-4" class="btn btn-primary number" value="4"><h1>4</h1></button>
-              <button id="button-5" class="btn btn-primary number" value="5"><h1>5</h1></button>
-              <button id="button-6" class="btn btn-primary number" value="6"><h1>6</h1></button>
-              <button id="button-minus" class="btn btn-danger operator" value="minus">
+              <button id="button-4" class="btn btn-primary number" value="4">
+                <h1>4</h1>
+              </button>
+              <button id="button-5" class="btn btn-primary number" value="5">
+                <h1>5</h1>
+              </button>
+              <button id="button-6" class="btn btn-primary number" value="6">
+                <h1>6</h1>
+              </button>
+              <button
+                id="button-minus"
+                class="btn btn-danger operator"
+                value="minus"
+              >
                 <h1>&minus;</h1>
               </button>
               <br /><br />
-              <button id="button-7" class="btn btn-primary number" value="7"><h1>7</h1></button>
-              <button id="button-8" class="btn btn-primary number" value="8"><h1>8</h1></button>
-              <button id="button-9" class="btn btn-primary number" value="9"><h1>9</h1></button>
-              <button id="button-multiply" class="btn btn-danger operator" value="times">
+              <button id="button-7" class="btn btn-primary number" value="7">
+                <h1>7</h1>
+              </button>
+              <button id="button-8" class="btn btn-primary number" value="8">
+                <h1>8</h1>
+              </button>
+              <button id="button-9" class="btn btn-primary number" value="9">
+                <h1>9</h1>
+              </button>
+              <button
+                id="button-multiply"
+                class="btn btn-danger operator"
+                value="times"
+              >
                 <h1>&times;</h1>
               </button>
               <br /><br />
-              <button id="button-0" class="btn btn-primary number" value="0"><h1>0</h1></button>
-              <button id="button-divide" class="btn btn-danger operator" value="divide">
+              <button id="button-0" class="btn btn-primary number" value="0">
+                <h1>0</h1>
+              </button>
+              <button
+                id="button-divide"
+                class="btn btn-danger operator"
+                value="divide"
+              >
                 <h1>&divide;</h1>
               </button>
-              <button id="button-power" class="btn btn-danger operator" value="power">
+              <button
+                id="button-power"
+                class="btn btn-danger operator"
+                value="power"
+              >
                 <h1>^</h1>
               </button>
-              <button id="button-equal" class="btn btn-success equal" value="equals">
+              <button
+                id="button-equal"
+                class="btn btn-success equal"
+                value="equals"
+              >
                 <h1>=</h1>
               </button>
               <br /><br />
-              <button id="button-clear" class="btn btn-dark clear" value="clear">
+              <button
+                id="button-clear"
+                class="btn btn-dark clear"
+                value="clear"
+              >
                 <h1>clear</h1>
               </button>
             </div>
@@ -121,7 +171,10 @@
 
         // 3. listen for operator click
         $(".operator").click(function() {
-          if (isOperatorChosen === false) {
+          if (!numOne || isCalculated) {
+            return false;
+          }
+          if (numOne || isOperatorChosen === false) {
             isOperatorChosen = true;
             operator = $(this).attr("value");
             $("#operator").text(operator);
