--- a/06-ajax/homework/index.html
+++ b/06-ajax/homework/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>NYTimes Search | EC</title>
+    <title>Giphy AJAX Project</title>
     <!-- Bootstrap CSS CDN  -->
     <link
       rel="stylesheet"
@@ -21,66 +21,27 @@
       <header class="jumbotron jumbotron-fluid bg-dark rounded">
         <div class="container">
           <h1 class="font-weight-bold text-white text-center">
-            <i class="fa fa-newspaper-o"></i> New York Times Search
+            <i class="fa fa-picture-o"></i> Giphy AJAX Project
           </h1>
         </div>
       </header>
 
-      <main>
-        <section class="mb-5">
-          <header
-            class="bg-light border-top border-right border-left rounded-top px-4 py-3"
-          >
-            <h2 class="h6 m-0 font-weight-bold">Search Parameters</h2>
-          </header>
-          <form class="border rounded-bottom p-4">
+      <main class="container">
+        <div id="buttons" class="row justify-content-center mb-5"></div>
+        <div class="row justify-content-center mb-5">
+          <form>
             <div class="form-group">
-              <label for="formSearchTerm">Search Term:</label>
-              <input type="text" class="form-control" id="formSearchTerm" />
-            </div>
-            <div class="form-group">
-              <label for="formNumberOfRecords"
-                >Number of Records to Retrieve</label
+              <label for="topic-input"
+                >Add half of a dysfunctional mother/daughter duo:</label
               >
-              <select class="form-control" id="formNumberOfRecords">
-                <option>1</option>
-                <option selected>5</option>
-                <option>10</option>
-              </select>
+              <input type="text" class="form-control" id="topic-input" />
             </div>
-            <div class="form-group">
-              <label for="formStartYear"
-                >Start Year:
-                <small class="form-text text-muted">Optional</small></label
-              >
-              <input type="number" class="form-control" id="formStartYear" />
-            </div>
-            <div class="form-group">
-              <label for="formEndYear"
-                >End Year:
-                <small class="form-text text-muted">Optional</small></label
-              >
-              <input type="number" class="form-control" id="formEndYear" />
-            </div>
-            <button id="formSearch" type="submit" class="btn btn-dark">
-              <i class="fa fa-search"></i>
-              Search
-            </button>
-            <button id="formClear" type="button" class="btn btn-dark">
-              <i class="fa fa-trash"></i>
-              Clear Results
+            <button type="submit" class="btn btn-secondary" id="add-topic">
+              Submit <i class="fa fa-arrow-right"></i>
             </button>
           </form>
-        </section>
-
-        <section>
-          <header
-            class="bg-light border-top border-right border-left rounded-top px-4 py-3"
-          >
-            <h2 class="h6 m-0 font-weight-bold">Top Articles</h2>
-          </header>
-          <div id="formResults" class="border rounded-bottom p-4"></div>
-        </section>
+        </div>
+        <div class="row justify-content-center" id="gifs"></div>
       </main>
 
       <footer class="text-center p-4">
