--- a/07-firebase/11-countdownbutton/Solved/student-do-downbutton.html
+++ b/07-firebase/11-countdownbutton/Solved/student-do-downbutton.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CountDown Button with Firebase!</title>
 
-<head>
+    <!-- Firebase Reference -->
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+  </head>
 
-  <meta charset="UTF-8">
-  <title>CountDown Button with Firebase!</title>
+  <body>
+    <h1>Only <span id="click-value"></span> clicks to go!!</h1>
 
-  <!-- Firebase Reference -->
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <button id="click-button">Click Me!!!!</button>
+    <button id="restart-button">Restart</button>
 
-</head>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<body>
-
-  <h1>Only
-    <span id="click-value"></span> clicks to go!!</h1>
-
-  <button id="click-button">Click Me!!!!</button>
-  <button id="restart-button">Restart</button>
-
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-  <!-- Script -->
-  <script src="logic.js"></script>
-
-</body>
-
+    <!-- Script -->
+    <script src="logic.js"></script>
+  </body>
 </html>
