--- a/07-firebase/20-MomentJS/Unsolved/momentjs-activity.html
+++ b/07-firebase/20-MomentJS/Unsolved/momentjs-activity.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Moment JS Exercises</title>
+  </head>
 
-<head>
+  <body>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
 
-  <meta charset="UTF-8">
-  <title>Moment JS Exercises</title>
+    <!-- Link to Moment.js should go here -->
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
 
-</head>
+    <script>
+      var today = moment();
+      var randomDate = "02/23/1999";
+      var convertedDate = moment(randomDate, "MM/DD/YYYY");
 
-<body>
+      // Using scripts from moment.js write code below to complete each of the following.
+      // Console.log to confirm the code changes we made worked.
 
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
+      // 1 ...to convert the randomDate into three other date formats
+      console.log("________ CONVERTING DATE ________");
+      console.log(moment(randomDate).format("MMMM Do YYYY, h:mm:ss a"));
+      console.log(moment(randomDate).format("dddd"));
+      console.log(moment(randomDate).format("MMM Do YY"));
+      console.log(moment(randomDate).format());
 
-  <!-- Link to Moment.js should go here -->
+      // 2 ...to determine the time in years, months, days between today and the randomDate
+      console.log("________ DETERMINE TIME FROM ________");
+      console.log(moment(randomDate).fromNow()); // years
+      console.log(today.diff(convertedDate, "months") + " months ago"); // months
+      console.log(today.diff(convertedDate, "days") + " days ago"); // days
+      console.log(today.diff(convertedDate, "hours") + " hours ago"); // hours
 
+      // 3 ...to determine the number of days between the randomDate and 02/14/2001
+      console.log(
+        "________ number of days between the randomDate and 02/14/2001 ________"
+      );
+      console.log(
+        moment("02/14/2001", "MM/DD/YYYY").diff(convertedDate, "days") +
+          " days ago"
+      ); // days
 
-  <script>
-    var randomDate = "02/23/1999";
+      // 4 ...to convert the randomDate to unix time (be sure to look up what unix time even is!!!)
+      console.log(moment(randomDate).unix());
 
-    // Using scripts from moment.js write code below to complete each of the following.
-    // Console.log to confirm the code changes we made worked.
+      // 5 ...to determine what day of the week and what week of the year this randomDate falls on.
+      console.log(moment(randomDate).format("dddd"));
 
-    // 1 ...to convert the randomDate into three other date formats
-    // 2 ...to determine the time in years, months, days between today and the randomDate
-    // 3 ...to determine the number of days between the randomDate and 02/14/2001
-    // 4 ...to convert the randomDate to unix time (be sure to look up what unix time even is!!!)
-    // 5 ...to determine what day of the week and what week of the year this randomDate falls on.
-
-    // If you finish early...
-    // Start creating HTML inputs and then redisplay the dates using moment.js elsewhere on the page.
-  </script>
-
-</body>
-
+      // If you finish early...
+      // Start creating HTML inputs and then redisplay the dates using moment.js elsewhere on the page.
+    </script>
+  </body>
 </html>
