--- a/07-firebase/homework/train-index.html
+++ b/07-firebase/homework/train-index.html
@@ -46,12 +46,12 @@
           style="height: 100vh"
         >
           <div class="sidebar-sticky">
-            <h2 class="h5">Add Ship</h2>
+            <h2 class="h5">Add Train</h2>
             <hr class="mb-4" />
 
             <form class="needs-validation" novalidate="">
               <div class="mb-3">
-                <label for="name">Boat name</label>
+                <label for="name">Train name</label>
                 <input
                   type="text"
                   class="form-control"
@@ -61,7 +61,7 @@
                   required=""
                 />
                 <div class="invalid-feedback">
-                  Valid boat name is required.
+                  Valid train name is required.
                 </div>
               </div>
 
@@ -83,7 +83,6 @@
                 <input
                   type="time"
                   min="0"
-                  step="1"
                   class="form-control"
                   id="firstTrainTime"
                   placeholder=""
@@ -96,10 +95,10 @@
                   <span class="text-muted small d-block">(min)</span></label
                 >
                 <input
-                  type="time"
+                  type="number"
                   class="form-control"
                   id="frequency"
-                  placeholder="01/08/1989"
+                  placeholder=""
                   required=""
                 />
                 <div class="invalid-feedback">
@@ -120,7 +119,7 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-9 pt-3 px-4">
-          <h2 class="h5 mb-3">Current Employees</h2>
+          <h2 class="h5 mb-3">Current Train Schedule</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
               <thead>
@@ -150,6 +149,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="train-scripts.js"></script>
   </body>
 </html>
